# bird_terminalGraphic_c

./: CMakeLists.txt  README.md  main.c  terminalGraphic.c  terminalGraphic.h
assets/: assets.txt
include/: terminalGraphic.h
src/: main.c  terminalGraphic.c
